# charviews

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
contrib/aur/: PKGBUILD
src/: camera_list.rs  main.rs  terminal_spawn.rs  viewer.rs
src/tui/: logo.rs  mod.rs
