[package]
name = "charvision"
version = "0.2.0"
edition = "2021"
description = "CLI: live webcam as ASCII art in your terminal (charviews)"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli", "webcam", "ascii", "v4l2", "camera"]
categories = ["command-line-utilities", "multimedia"]
autobins = false

[[bin]]
name = "charviews"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
nokhwa = { version = "0.10", features = ["input-native"] }
anyhow = "1.0"
